<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <EditTextPreference
            app:defaultValue="https://"
            app:key="server_address"
            app:summary="@string/server_address_summary"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cache">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:title="@string/cache_activate"
            app:key="cache_activate" />
        <EditTextPreference
            app:defaultValue="2"
            app:dependency="cache_activate"
            app:key="cache_size"
            app:summary="@string/cache_size_description"
            app:title="@string/cache_size"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:dependency="cache_activate"
            app:key="cache_clear"
            app:summary="@string/clear_cache_description"
            app:title="@string/clear_cache" />
    </PreferenceCategory>
</PreferenceScreen>